<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Router Keygen YoloSec</string>
    <string name="msg_welcome_title">Router Keygen</string>
    <string name="msg_welcome_text">Thank you for trying Router Keygen. If you like this application, please consider donating. The link is on the preference menu. Your donation will motivate the authors to improve on this great open-source tool.</string>
    <string name="msg_welcome_tip">Select any supported network to generate possible keys.</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_manual">Manual Input</string>
    <string name="menu_preferences">Preferences</string>
    <string name="context_menu_copy_ssid">Copy SSID</string>
    <string name="context_menu_copy_mac">Copy MAC address</string>
    <string name="context_menu_use_mac">Use MAC address in Manual Input Dialog</string>
    <string name="share_msg_begin">Keys</string>
    <string name="share_title">Share Keys</string>
    <string name="msg_copied"><xliff:g id="arg">%1$s</xliff:g> was copied to clipboard!</string>
    <string name="msg_scanstarted">Scanning started</string>
    <string name="msg_wifienabling">Enabling Wifi</string>
    <string name="msg_results">Click on one of the keys to copy it.\nThen the Wifi Settings will open where you can test it.</string>
    <string name="manual_mac_separator">:</string>
    <string name="not_auto_connect_waiting">Waiting for the current network to disconnect</string>
    <string name="not_auto_connect_key_testing">Testing <xliff:g id="key">%1$s</xliff:g></string>
    <string name="not_correct_key_testing"><xliff:g id="key">%1$s</xliff:g> is the correct key.</string>
    <string name="networklist_supported">Supported</string>
    <string name="networklist_unlikely_supported">Unlikely Supported</string>
    <string name="networklist_unsupported">Unsupported</string>
    <string name="bt_manual_cancel">Cancel</string>
    <string name="bt_manual_calc">Calculate</string>
    <string name="bt_share">Share Keys</string>
    <string name="bt_close">Close</string>
    <string name="bt_save_sd">Save to the SD</string>
    <string name="bt_auto_connect">Test key(s)</string>
    <string name="bt_website">Go to Website</string>
    <string name="bt_paypal">PayPal</string>
    <string name="bt_google_play">Google Play</string>
    <string name="bt_dont_donate">Don\'t donate :-(</string>
    <string name="lb_manual">Input your ESSID here:</string>
    <string name="dialog_nativecalc_msg">This can take up to 2 minutes. Please wait.</string>
    <string name="msg_dicislarge">The dictionary size is 66 MBs. It\'s advisable that you are using a wifi connection.\nAre you sure you want to continue?</string>
    <string name="msg_dl_dlingdic">Downloading dictionary</string>
    <string name="msg_dic_updated">Your dictionary is already at the latest version.</string>
    <string name="msg_dic_updated_finished">Your dictionary has been updated to the latest version.</string>
    <string name="msg_wait">Please wait…</string>
    <string name="lb_manual_bssid">MAC address (optional):</string>
    <string name="dialog_about_credits">Credits</string>
    <string name="dialog_about_credits_desc">Router Keygen is the result of the invaluable contribution from the  following people/organizations:\n\n
      Rui Araújo, Luís Fonseca, Ângela Igreja, Simone Guidi, Matthijs de Rijk, Van Hove Sven, Jon Uriarte, <a href="http://www.gnucitizen.org/">GNUCITIZEN</a>, <a href="http://wifiresearchers.wordpress.com/">White Hats Crew</a>, Fred Williams, Muris Kurgaš, <a href="http://websec.ca/">Pedro Joaquim</a>, chaeo, Nicolas DeRouet, Eduardo Laborin, Florian Frank, Axel Martínez, Victor Mignot, Martijn Gerkes, Alejandro Marquez,<a href="http://www.openssl.org/">OpenSSl</a>, <a href="http://ednolo.alumnos.upv.es/">Eduardo Novella</a>, <a href="https://haxx.in/">Bl4sty</a>.</string>
    <string name="dialog_about_license">License</string>
    <string name="dialog_about_license_desc">This application is under the GPLv3.\n\nYou can read its terms <a href="http://www.gnu.org/licenses/gpl-3.0.html">here</a>.\n\n
        RouterKeygen is built using open source software:\n<a href="https://github.com/JakeWharton/ActionBarSherlock">ActionBarSherlock</a>\n<a href="https://github.com/iPaulPro/aFileChooser">aFileChooser</a>\n<a href="https://github.com/beworker/pinned-section-listview">PinnedSectionListView</a>\n<a href="https://code.google.com/p/android-wifi-connecter/">android-wifi-connecter</a>\n<a href="https://haxx.in/upc_keys.c">upc_keys.c</a>.\n\n  The license terms for this projects can be read by following the link.</string>
    <string name="msg_app_updated">The application is already at the latest version.</string>
    <string name="update_title">Update Available</string>
    <string name="update_notification">There is version <xliff:g id="version">%1$s</xliff:g> available.</string>
    <string name="update_message">There is version <xliff:g id="version">%1$s</xliff:g> available. Go to the website to download the latest version.</string>
    <string name="cancel_download">Do you want to cancel the dictionary download?</string>
    <string name="cancel_auto_test">Do you want to cancel the keys testing?</string>
    <string name="msg_donation">Install the following app to remove the ads and to donate. Thank you! :-)</string>
    <string name="pref_hinton_wifion">Activate the Wifi Automatically</string>
    <string name="pref_hintoff_wifion">Do not activate the Wifi Automatically</string>
    <string name="pref_wifion">Auto Wifi On</string>
    <string name="pref_dict_select">Select Dictionary</string>
    <string name="pref_dict_select_des">Select the dictionary file</string>
    <string name="pref_1section">General Options</string>
    <string name="pref_2section">About</string>
    <string name="pref_donate_paypal">Donate (Paypal)</string>
    <string name="pref_donate_google_play">Donate (Google Play)</string>
    <string name="pref_donate_why">Buy me a coffee if you liked this application</string>
    <string name="pref_about">About Router Keygen</string>
    <string name="pref_about_desc">Router Keygen calculates default passwords for several common routers.\n\n<a href="http://routerkeygen.github.io/">Project\'s Website</a>\n\nPlease use the application at your own risk and responsibility. It is only for educational and research purposes and to assess your home router security. Do not use the application to connect to networks you are not authorized to. Application is not intended as a tool for attackers.\n\nVersion: </string>
    <string name="pref_native">Native Calculation</string>
    <string name="pref_hinton_native">Calculating on target if it fails to find the dictionary</string>
    <string name="pref_hintoff_native">Only warns if it fails to find the dictionary</string>
    <string name="pref_download_des">Dictionary needed for Thomson keys</string>
    <string name="pref_download">Download Dictionary</string>
    <string name="pref_thomson3g">Use 3G/4G for Thomson</string>
    <string name="pref_hinton_thomson3g">Fetching keys from Internet</string>
    <string name="pref_hintoff_thomson3g">Using dictionary to generate keys.</string>
    <string name="pref_thomson_section">Thomson Options</string>
    <string name="pref_update">Check for Updates</string>
    <string name="pref_msg_download_running">The dictionary is already being downloaded.</string>
    <string name="pref_autoscan">Auto Scan</string>
    <string name="pref_hinton_autoscan">Scan will be repeated every few seconds.</string>
    <string name="pref_hintoff_autoscan">Scan is always manual.</string>
    <string name="pref_autoscan_interval">Auto Scan Interval</string>
    <string name="pref_hint_autoscan_interval">Period of the automatic scan.</string>
    <string name="pref_analytics">Google Analytics</string>
    <string name="pref_hinton_analytics">Usage and crashes are being tracked anonymously</string>
    <string name="pref_hintoff_analytics">Usage and crashes are not being tracked</string>
    <string name="pref_changelog">Changelog</string>
    <string name="msg_unspported">This network is not supported!</string>
    <string name="msg_nowifidetected">No WIFI networks detected!</string>
    <string name="msg_nowifi">Wifi not activated! Please activate Wifi!</string>
    <string name="msg_scanfailed">Scanning failed!</string>
    <string name="msg_wifibroken">Failed to activate Wifi</string>
    <string name="msg_shortessid6">Invalid ESSID! It must have 6 characters.</string>
    <string name="msg_errordict">Error reading the dictionary.</string>
    <string name="msg_errnomatches">No matches were found.</string>
    <string name="msg_shortessid5">Invalid ESSID! It must have 6 characters.</string>
    <string name="msg_nomac">This key cannot be generated without MAC address</string>
    <string name="msg_dlinkerror">Error in the calculation of the D-Link key</string>
    <string name="msg_dictnotfound">Dictionary not found on SDCard.</string>
    <string name="msg_nosdcard">The external storage is not available.</string>
    <string name="msg_nomd5">This phone cannot process a MD5 hash.</string>
    <string name="msg_nosha1">This phone cannot process a SHA1 hash.</string>
    <string name="msg_nosha256">This phone cannot process a SHA256 hash.</string>
    <string name="msg_errpirelli">The MAC address is invalid.</string>
    <string name="msg_errthomson3g">Error connecting with the web service.</string>
    <string name="msg_erralicenotsupported">This Alice series is not yet supported!</string>
    <string name="msg_errversion">Unknown version of the dictionary.</string>
    <string name="msg_startingnativecalc">Error with dictionary. Starting native calculation.</string>
    <string name="msg_err_essid_no_match">The calculated SSID does not match the provided one.</string>
    <string name="msg_err_native">Error in the Native Calculation.Please inform the team.</string>
    <string name="msg_nomemoryonsdcard">The external storage has not enough free memory.</string>
    <string name="msg_no_write_permissions">Impossible to write to the selected folder.</string>
    <string name="msg_error">Error</string>
    <string name="pref_msg_err_backup_dic">Error moving the previous Dictionary to a backup</string>
    <string name="pref_msg_err_rename_dic">Error renaming downloaded Dictionary.</string>
    <string name="msg_err_sendto">An error occurred when tried to share the keys.</string>
    <string name="msg_shortessid13">Invalid ESSID! It must have 13 characters.</string>
    <string name="msg_err_unkown">An unknown error has occurred.</string>
    <string name="msg_err_online_too_adv">Online version of the dictionary is too advanced for this program.\nPlease consider updating.</string>
    <string name="err_misbuilt_apk">Your APK was not correctly build. Please remember to build the native part first.</string>
    <string name="msg_err_verizon_ssid">Error processing this SSID.</string>
    <string name="msg_err_saving_key_file">Error while saving file with the keys.</string>
    <string name="msg_saved_key_file">saved to the SD card.</string>
    <string name="pref_msg_no_network">There is no network access.</string>
    <string name="msg_err_webdic_table">Error while processing online keys.</string>
    <string name="msg_unspported_network">A valid network was not recognized. Please check the SSID and the MAC address.</string>
    <string name="msg_invalid_mac">A valid MAC address wasn\'t entered so it will be ignored.</string>
    <string name="msg_error_key_testing">Error trying to test the key.</string>
    <string name="msg_no_correct_keys">No correct keys.</string>
    <string name="msg_auto_connect_running">The auto connect process is already running.</string>
</resources>