<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2012 Rui Araújo, Luís Fonseca
  
   This file is part of Router Keygen.
  
   Router Keygen is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.
   
   Router Keygen is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
   
   You should have received a copy of the GNU General Public License
   along with Router Keygen.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.Preferences" >

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/pref_1section" >

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@bool/wifiOnDefault"
            android:key="wifion"
            android:summaryOff="@string/pref_hintoff_wifion"
            android:summaryOn="@string/pref_hinton_wifion"
            android:title="@string/pref_wifion" />

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@bool/autoScanDefault"
            android:key="autoScan"
            android:summaryOff="@string/pref_hintoff_autoscan"
            android:summaryOn="@string/pref_hinton_autoscan"
            android:title="@string/pref_autoscan" />
    </PreferenceCategory>

    <com.robobunny.SeekBarPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="@integer/autoScanIntervalDefault"
        android:key="autoScanInterval"
        android:max="@integer/autoScanIntervalMax"
        android:summary="@string/pref_hint_autoscan_interval"
        android:title="@string/pref_autoscan_interval"
        robobunny:min="@integer/autoScanIntervalMin"
        robobunny:unitsLeft=""
        robobunny:unitsRight="s" />

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/pref_thomson_section" >

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="thomson3g"
            android:summaryOff="@string/pref_hintoff_thomson3g"
            android:summaryOn="@string/pref_hinton_thomson3g"
            android:title="@string/pref_thomson3g" />

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="nativethomson"
            android:summaryOff="@string/pref_hintoff_native"
            android:summaryOn="@string/pref_hinton_native"
            android:title="@string/pref_native" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="download"
            android:summary="@string/pref_download_des"
            android:title="@string/pref_download" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="dictionaryPath"
            android:summary="@string/pref_dict_select_des"
            android:title="@string/pref_dict_select" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="2section"
        android:title="@string/pref_2section" >

        <CheckBoxPreference
            android:id="@+id/analytics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@bool/analyticsDefault"
            android:key="analytics_enabled"
            android:summaryOff="@string/pref_hintoff_analytics"
            android:summaryOn="@string/pref_hinton_analytics"
            android:title="@string/pref_analytics" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="update"
            android:title="@string/pref_update" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="donate_playstore"
            android:summary="@string/pref_donate_why"
            android:title="@string/pref_donate_google_play" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="donate_paypal"
            android:summary="@string/pref_donate_why"
            android:title="@string/pref_donate_paypal" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="changelog"
            android:title="@string/pref_changelog" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="about"
            android:title="@string/pref_about" />
    </PreferenceCategory>

</PreferenceScreen>